--- a/app/src/main/res/layout/activity__login.xml
+++ b/app/src/main/res/layout/activity__login.xml
@@ -6,37 +6,31 @@
     android:padding="10dp"
     android:gravity="center">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/lTextEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp" >
 
-        <android.support.design.widget.TextInputEditText
+
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/lEditEmail"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
-            android:padding="20dp"/>
+            android:padding="20dp"
+            android:layout_marginBottom="10dp"/>
 
-    </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/lTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp" >
 
-        <android.support.design.widget.TextInputEditText
+    <EditText
+
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/lEditPassword"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
-            android:padding="20dp"/>
+            android:padding="20dp"
+            android:layout_marginBottom="10dp" >
 
-    </android.support.design.widget.TextInputLayout>
+    </EditText>
 
     <Button
         android:layout_width="match_parent"
