--- a/app/src/main/res/layout/activity_email_verify.xml
+++ b/app/src/main/res/layout/activity_email_verify.xml
@@ -4,18 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp">
-    <android.support.design.widget.TextInputLayout
+    <EditText
         android:id="@+id/verify_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
             android:padding="20dp"
             android:hint="Verification Code"
-            android:inputType="number"/>
-    </android.support.design.widget.TextInputLayout>
+            android:inputType="number">
+      </EditText>
     <Button
         android:id="@+id/btnVerify"
         android:layout_width="match_parent"
