--- a/app/src/main/res/layout/activity__login.xml
+++ b/app/src/main/res/layout/activity__login.xml
@@ -11,20 +11,18 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/lEditEmail"
+            android:id="@+id/email_login"
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
             android:padding="20dp"
             android:layout_marginBottom="10dp"/>
-
-
 
     <EditText
 
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/lEditPassword"
+            android:id="@+id/password_login"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
             android:padding="20dp"
