--- a/app/src/main/res/layout/activity__login.xml
+++ b/app/src/main/res/layout/activity__login.xml
@@ -1,73 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:orientation="vertical"
+
+    android:background="@drawable/login_main"
     android:gravity="center">
 
+     <ProgressBar
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="270px"
+        android:id="@+id/login_progress_bar"
+        android:visibility="gone"/>
 
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/email_login"
-            android:hint="@string/hint_email"
-            android:inputType="textEmailAddress"
-            android:padding="20dp"
-            android:layout_marginBottom="10dp"/>
-
-    <EditText
-
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/password_login"
-            android:hint="@string/hint_password"
-            android:inputType="textPassword"
-            android:padding="20dp"
-            android:layout_marginBottom="10dp" >
-
-    </EditText>
-
-    <Button
+ <LinearLayout
+     android:orientation="vertical"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     >
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/white"
-        android:id="@+id/btnLogin"/>
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="match_parent"
+        android:background="@drawable/welcome_photo"
+        android:layout_marginHorizontal="70dp"
+        android:layout_marginBottom="80dp"/>
 
-        android:layout_marginTop="10px"
-        android:paddingTop="20px"
-        android:paddingBottom="20px"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content" />
+     <EditText
+         android:layout_width="match_parent"
+         android:layout_height="45dp"
+         android:id="@+id/email_login"
+         android:hint="@string/hint_email"
+         android:background="@drawable/login_et"
+         android:inputType="textEmailAddress"
+         android:paddingLeft="20dp"
+         android:textSize="15sp"
+         android:layout_marginHorizontal="30dp"
+         android:layout_marginBottom="10dp"
+         android:drawableEnd="@drawable/account_drawable"
+         android:paddingRight="20dp"
 
-    <Button
-        android:id="@+id/btnLinkToRegisterScreen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dip"
-        android:background="@null"
-        android:text="Register"
-        android:textAllCaps="false"
-        android:textColor="@color/colorPrimary"
-        android:textSize="13sp" />
+       />
 
-    <Button
-        android:id="@+id/btnForgotPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@null"
-        android:text="Forgot Password"
-        android:textAllCaps="false"
-        android:textColor="@color/colorPrimary"
-        android:textSize="13sp" />
+     <EditText
+         android:layout_width="match_parent"
+         android:layout_height="45dp"
+         android:id="@+id/password_login"
+         android:hint="@string/hint_password"
+         android:background="@drawable/login_et"
+         android:inputType="textPassword"
+         android:paddingLeft="20dp"
+         android:textSize="15sp"
+         android:layout_marginHorizontal="30dp"
+         android:layout_marginBottom="10dp"
+         android:drawableEnd="@drawable/password_drawable"
+         android:paddingRight="20dp"
 
-</LinearLayout>
+         />
+     <Button
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:text="@string/login"
+         android:padding="0px"
+         android:layout_marginHorizontal="120dp"
+         android:layout_gravity="center_horizontal"
+         android:background="@drawable/login_btn"
+         android:textColor="@color/white"
+         android:id="@+id/btnLogin"
+
+         />
+     <Button
+         android:id="@+id/forget_password_btn"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+
+         android:background="@null"
+         android:text="Forgot Password"
+         android:textAllCaps="false"
+         android:textColor="@color/white"
+         android:textSize="15sp"
+         android:layout_marginBottom="80dp"/>
+     <LinearLayout
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:orientation="horizontal"
+         android:layout_gravity="center_horizontal"
+
+
+         >
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:textColor="@color/white"
+             android:textSize="15sp"
+             android:padding="0px"
+             android:text="dont have an account "/>
+
+         <Button
+             android:id="@+id/btnLinkToRegisterScreen"
+             android:layout_width="57dp"
+             android:layout_height="wrap_content"
+             android:layout_margin="0px"
+             android:background="@null"
+             android:padding="0px"
+             android:text="@string/sign_in"
+             android:textStyle="bold"
+             android:autoLink="all"
+             android:textAllCaps="false"
+             android:textColor="@color/gray"
+             android:textSize="15sp" />
+
+
+     </LinearLayout>
+
+
+ </LinearLayout>
+
+
+
+</FrameLayout>
