--- a/app/src/main/res/layout/activity_time_table.xml
+++ b/app/src/main/res/layout/activity_time_table.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.mohamed.railwaymangementsystem.UserAccount"
-    tools:showIn="@layout/activity_user_account">
+    tools:context="com.example.mohamed.railwaymangementsystem.TimeTableActivity">
 
 </android.support.constraint.ConstraintLayout>
