--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,9 @@
     <color name="gradStar">#19AA8B</color>
     <color name="gradStop">#23A7DB</color>
     <color name="borderless_button">#FFFFFF</color>
-
+    <color name="gray">#aaa</color>
+    <color name="dark_gray" >#EBE7E2</color>
+    <color name="white_orange">#FFD695</color>
+    <color name="oragne">#FFA366</color>
+    <color name="dark_blue" >#305D7B</color>
 </resources>
