--- a/app/src/main/res/layout/train_location_fragement.xml
+++ b/app/src/main/res/layout/train_location_fragement.xml
@@ -50,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="Search"
+        android:id="@+id/train_tracking_search_btn"
         android:textSize="16dp"
         android:background="@drawable/login_et"
         android:layout_marginTop="40dp"
